Verification email with button click

--- a/client/src/assets/data/mail_template_data/mail_template.html
+++ b/client/src/assets/data/mail_template_data/mail_template.html
@@ -50,7 +50,15 @@
                                                 style="display:inline-block;min-width:110px;color:#6b7280">Subject</span><strong>{{subject}}</strong>
                                         </div>
                                         <div style="margin:0 0 10px 0"><span
-                                                style="display:inline-block;min-width:110px;color:#6b7280">{{lurlHeading}}</span><strong>{{url}}</strong>
+                                                style="display:inline-block;min-width:110px;color:#6b7280;vertical-align:top">{{lurlHeading}}</span>
+                                            <div style="display:inline-block;vertical-align:top;margin-left:4px">
+                                                <a href="{{url}}" target="_blank" style="display:inline-block;background:#0ea5e9;color:#fff;padding:10px 20px;border-radius:6px;text-decoration:none;font-weight:600;font-size:14px">
+                                                    Click Here
+                                                </a>
+                                                <div style="font-size:12px;color:#6b7280;margin-top:8px;word-break:break-all">
+                                                    Or copy: <strong style="color:#111827">{{url}}</strong>
+                                                </div>
+                                            </div>
                                         </div>
                                     </td>
                                 </tr>
