--- a/client/src/assets/data/mail_template_data/mail_template.html
+++ b/client/src/assets/data/mail_template_data/mail_template.html
@@ -17,14 +17,11 @@
                     <tr>
                         <td
                             style="background:linear-gradient(90deg,#0ea5e9,#6366f1);color:#fff;padding:22px 26px;font:600 20px/1.3 Arial,Helvetica,sans-serif">
-                            We’ve Received Your Message</td>
+                            {{ header or "We’ve Received Your Message" }}</td>
                     </tr>
                     <tr>
                         <td style="padding:28px 26px 12px 26px;font:16px/1.65 Arial,Helvetica,sans-serif;color:#0f172a">
-                            Thank you for contacting appname. Your request has been successfully submitted
-                            and added to our support queue. Our team reviews messages throughout the day, and you can
-                            expect a reply within 24–48 business hours. For urgent issues, simply reply to this email to
-                            escalate.</td>
+                            {{ body_text or ("Thank you for contacting appname. Your request has been successfully submitted and added to our support queue. Our team reviews messages throughout the day, and you can expect a reply within 24–48 business hours. For urgent issues, simply reply to this email to escalate." ) }}</td>
                     </tr>
                     <tr>
                         <td style="padding:0 26px 8px 26px">
@@ -51,6 +48,7 @@
                                         </div>
                                         <div style="margin:0 0 10px 0"><span
                                                 style="display:inline-block;min-width:110px;color:#6b7280;vertical-align:top">{{lurlHeading}}</span>
+                                            {% if url %}
                                             <div style="display:inline-block;vertical-align:top;margin-left:4px">
                                                 <a href="{{url}}" target="_blank" style="display:inline-block;background:#0ea5e9;color:#fff;padding:10px 20px;border-radius:6px;text-decoration:none;font-weight:600;font-size:14px">
                                                     Click Here
@@ -59,6 +57,7 @@
                                                     Or copy: <strong style="color:#111827">{{url}}</strong>
                                                 </div>
                                             </div>
+                                            {% endif %}
                                         </div>
                                     </td>
                                 </tr>
